--- a/app/styles/_helpers/symbols.scss
+++ b/app/styles/_helpers/symbols.scss
@@ -1,5 +1,6 @@
 $UTF8_BLACK_STAR: '\2605';
 
+$UTF8_COUNTRY_VUT: '\e643 ';
 $UTF8_COUNTRY_RWA: '\e642 ';
 $UTF8_COUNTRY_SAU: '\e641 ';
 $UTF8_COUNTRY_NCL: '\e640 ';
