--- a/main.css
+++ b/main.css
@@ -538,8 +538,8 @@ picture {
 
 @font-face {
   font-family: 'Symbols';
-  src: url("/fonts/Symbols.eot");
-  src: url("/fonts/Symbols.eot?#iefix") format("embedded-opentype"), url("/fonts/Symbols.woff") format("woff"), url("/fonts/Symbols.ttf") format("truetype"), url("/fonts/Symbols.svg#symbols") format("svg");
+  src: url("./fonts/Symbols.eot");
+  src: url("./fonts/Symbols.eot?#iefix") format("embedded-opentype"), url("./fonts/Symbols.woff") format("woff"), url("./fonts/Symbols.ttf") format("truetype"), url("./fonts/Symbols.svg#symbols") format("svg");
   font-weight: normal;
   font-style: normal; }
 .c-flag {
