--- a/main.css
+++ b/main.css
@@ -3488,6 +3488,7 @@ em {
   -webkit-transition: all 0.2s ease-in-out;
   -moz-transition: all 0.2s ease-in-out;
   transition: all 0.2s ease-in-out;
+  text-align: center;
   display: block;
   background-color: #f7f7f7;
   border-bottom: 1px solid #ddd;
