--- a/app/styles/_flags/mwi.scss
+++ b/app/styles/_flags/mwi.scss
@@ -3,7 +3,7 @@
 // http://www.vexilla-mundi.com/malawi_flag.html
 // Note: I was unable to do the correct math calculation in the circle to get
 // the symbol width, height and position, so I based everything on the circle
-// radius. In the end the symbol is not perfectly positionned
+// radius. In the end the symbol is not perfectly positioned.
 @mixin flag-mwi() {
   @include ratio(2 / 3);
   $unit: $height / 600;
