--- a/app/styles/_backup/_flags-backup1.scss
+++ b/app/styles/_backup/_flags-backup1.scss
@@ -196,7 +196,7 @@
    * stars with a repeating text-shadow.
    *
    * 1. Position element
-   * 2. Stars positionned in crescent and repeated through text-shadow
+   * 2. Stars positioned in crescent and repeated through text-shadow
    * 3. Create crescent by doing an eclipse with the circle box-shadow
    */
   &:after {
