--- a/app/styles/_layout/flaglist.scss
+++ b/app/styles/_layout/flaglist.scss
@@ -14,16 +14,13 @@ $card-image-hover-opacity: 0.7;
 $card-image-hover-color: gainsboro;
 
 .c-flaglist {
-  @include display(flex);
-  @include flex-wrap(wrap);
-  @include justify-content(space-between);
+  display: flex;
+  flex-flow: row wrap;
   padding-top: 30px;
 }
 
 .c-flaglist--item {
-  @include flex-basis(20em);
-  @include flex-grow(1);
-  @include transition (all 0.2s ease-in-out);
+  flex: 1 1 300px;
   background-color: $card-background;
   border-radius: $base-border-radius;
   border: $card-border;
