--- a/app/styles/_helpers/helper.scss
+++ b/app/styles/_helpers/helper.scss
@@ -53,6 +53,7 @@
   $h110:$height/110 !global;
   $h120:$height/120 !global;
   $h128:$height/128 !global;
+  $h140:$height/140 !global;
   $h144:$height/144 !global;
   $h198:$height/198 !global;
   $h200:$height/200 !global;
